--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>
+    <script src="js/angular-dragdrop.js"></script>
     <script src="js/frontend_controllers.js"></script>
     <script src="js/frontend_routes.js"></script>
     <script src="js/frontend_app.js"></script>
